--- a/FrontEnd/SalaoDeBeleza/package.json
+++ b/FrontEnd/SalaoDeBeleza/package.json
@@ -9,7 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.5.13"
+    "axios": "^1.8.4",
+    "bootstrap": "^5.3.3",
+    "jwt-decode": "^4.0.0",
+    "sweetalert2": "^11.17.2",
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
