--- a/FrontEnd/SalaoDeBeleza/package.json
+++ b/FrontEnd/SalaoDeBeleza/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
+    "cors": "^2.8.5",
     "jwt-decode": "^4.0.0",
     "sweetalert2": "^11.17.2",
     "vue": "^3.5.13",
